# bsdflags

./: .gitignore  pyproject.toml
bsdflags/: cli.py  click.py  file.py  flags.py
