[tool.poetry]
name = "bsdflags"
version = "0.1.0"
description = "BSD file flag viewer"
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
flags = "bsdflags.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
